--- a/ui/app/styles/search.scss
+++ b/ui/app/styles/search.scss
@@ -18,19 +18,11 @@ ul.selection-list li.sl-line:hover {
   color: #1A3481;
 }
 
-.movie-lineResume {
-  width: 100%;
-  display: inline-block;
-  padding-bottom: 20px;
-  border-bottom: 1px $color-gris2 solid;
-}
-
 .container-title, .details-panel-title {
   font-size: 16px;
   text-transform: uppercase;
   color: #acacac;
 }
-
 
 .results {
   text-align: left;
@@ -47,23 +39,18 @@ ul.selection-list li.sl-line:hover {
   font-weight: bold;
 }
 
-.count-results {
-  font-weight: bold;
-  padding-left: 5px;
-}
-
 
 .title-level-1, .title-level-2, .title-level-3 {
   margin-bottom: 0;
 }
 .title-level-1 {
   color: $color-vert2;
-}
-.title-level-1 .form-control {
-  font-size: 16px;
-  font-weight: bold;
-  color: $color-vert2;
-  background-image: none;
+  .form-control {
+    font-size: 16px;
+    font-weight: bold;
+    color: $color-vert2;
+    background-image: none;
+  }
 }
 
 .title-level-2 .form-control {
