[quick-search]  css.

--- a/api/src/main/webapp/static/stylesheets/app.css
+++ b/api/src/main/webapp/static/stylesheets/app.css
@@ -79516,34 +79516,39 @@ body {
 ::-webkit-scrollbar-thumb:hover {
   background-color: #6acacb; }
 
-/* line 1, stdin */
+/* line 16, app/styles/variables.scss */
 /* line 2, stdin */
+body {
+  border: none; }
+
+/* line 3, stdin */
+/* line 6, stdin */
 .details {
   background-color: white;
-  border: solid 1px #CCCCCC;
+  border: solid 1px #e2e2e2;
   margin-left: 270px;
   position: relative;
   padding-left: 20px; }
 
-/* line 9, stdin */
-/* line 10, stdin */
+/* line 11, stdin */
+/* line 14, stdin */
 .cartridgeCss {
   z-index: 10;
   width: 500px;
-  border-left: solid 1px #CCCCCC;
-  border-bottom: solid 1px #CCCCCC;
+  border-left: solid 1px #e2e2e2;
+  border-bottom: solid 1px #e2e2e2;
   border-bottom: none;
   float: right; }
 
-/* line 19, stdin */
-/* line 19, stdin */
+/* line 22, stdin */
+/* line 23, stdin */
 .cartridge .header {
   background-color: #EEECE1;
   height: 150px;
-  border-bottom: solid 1px #CCCCCC; }
+  border-bottom: solid 1px #e2e2e2; }
 
-/* line 25, stdin */
-/* line 25, stdin */
+/* line 26, stdin */
+/* line 28, stdin */
 .cartridge .header .picture {
   float: left;
   width: 100px;
@@ -79551,121 +79556,121 @@ body {
   margin: 20px 20px; }
 
 /* line 32, stdin */
-/* line 32, stdin */
+/* line 34, stdin */
 .cartridge .header .title {
   padding-top: 30px;
   font-weight: bold;
   font-size: 18px; }
 
-/* line 38, stdin */
-/* line 38, stdin */
-.cartridge .field {
-  background-color: #F2F2F2;
-  float: left;
-  width: 100%;
-  padding: 10px;
-  border-bottom: solid 1px #CCCCCC; }
-
-/* line 46, stdin */
-/* line 46, stdin */
-.cartridge .field .title {
-  width: 30%;
-  float: left;
-  font-weight: bold; }
-
-/* line 52, stdin */
-/* line 52, stdin */
-.cartridge .field .content {
-  width: 70%;
-  float: right; }
-
-/* line 57, stdin */
-/* line 57, stdin */
+/* line 37, stdin */
+/* line 39, stdin */
 .cartridge .header .link {
   float: left;
   margin-top: 120px;
   margin-left: -85px; }
 
+/* line 43, stdin */
+/* line 44, stdin */
+.cartridge .field {
+  background-color: #F2F2F2;
+  float: left;
+  width: 100%;
+  padding: 10px;
+  border-bottom: solid 1px #e2e2e2; }
+
+/* line 49, stdin */
+/* line 51, stdin */
+.cartridge .field .title {
+  width: 30%;
+  float: left;
+  font-weight: bold; }
+
+/* line 54, stdin */
+/* line 56, stdin */
+.cartridge .field .content {
+  width: 70%;
+  float: right; }
+
 /* line 67, stdin */
-/* line 63, stdin */
+/* line 61, stdin */
 #slidingContent .slidingBloc:first-of-type {
   border: 0; }
 
-/* line 72, stdin */
-/* line 67, stdin */
+/* line 70, stdin */
+/* line 64, stdin */
 #slidingContent h3 {
   color: grey;
   margin: 10px 0; }
 
-/* line 77, stdin */
-/* line 72, stdin */
+/* line 74, stdin */
+/* line 68, stdin */
 #slidingContent .slidingBloc {
   padding: 5px 15px 10px 15px; }
 
-/* line 82, stdin */
-/* line 76, stdin */
-.sticky-navigation {
-  background-color: white;
-  width: 250px;
-  float: left; }
-
-/* line 88, stdin */
-/* line 82, stdin */
-.sticky-navigation a {
-  color: black; }
-
-/* line 92, stdin */
-/* line 86, stdin */
-.sticky-navigation a:hover, .sticky-navigation a:focus {
-  color: purple; }
-
-/* line 96, stdin */
-/* line 90, stdin */
+/* line 77, stdin */
+/* line 71, stdin */
 #slidingContent .card {
   background-color: #E0E0E0;
   margin: 0 20px;
   width: 900px;
   padding: 5px 10px; }
 
-/* line 104, stdin */
-/* line 97, stdin */
+/* line 83, stdin */
+/* line 77, stdin */
 #slidingContent .card .picture {
   float: left;
   width: 50px;
   height: 50px;
   margin-right: 20px; }
 
-/* line 110, stdin */
-/* line 104, stdin */
+/* line 89, stdin */
+/* line 83, stdin */
 #slidingContent .card .name {
   font-weight: bold;
   font-size: 20px;
   color: #953737; }
 
-/* line 116, stdin */
-/* line 110, stdin */
-#slidingContent .card.middleName {
+/* line 94, stdin */
+/* line 88, stdin */
+#slidingContent .card .middleName {
   font-weight: bold;
   font-size: 16px; }
 
+/* line 101, stdin */
+/* line 93, stdin */
+.sticky-navigation {
+  background-color: white;
+  width: 250px;
+  float: left; }
+
+/* line 105, stdin */
+/* line 98, stdin */
+.sticky-navigation a {
+  color: black; }
+
+/* line 110, stdin */
+/* line 102, stdin */
+.sticky-navigation a:hover, .sticky-navigation a:focus {
+  color: purple; }
+
 /*
-#slidingContent .noBorderBottom {
-  border-bottom: none;
-}*/
+  #slidingContent .noBorderBottom {
+    border-bottom: none;
+  }*/
 /*
-.slidingBloc button.btn.btn-raised.btn-primary {
-  margin-top: 0;
-  margin-left: 900px;
-  position: relative;
-  margin-bottom: 0px;
-}*/
-/* line 134, stdin */
-/* line 126, stdin */
+  .slidingBloc button.btn.btn-raised.btn-primary {
+    margin-top: 0;
+    margin-left: 900px;
+    position: relative;
+    margin-bottom: 0px;
+  }*/
+/* line 127, stdin */
+/* line 117, stdin */
 .slidingBloc ul.selection-list li.sl-line:hover {
   background: none; }
 
-/* line 138, stdin */
-/* line 130, stdin */
+/* line 131, stdin */
+/* line 121, stdin */
 .slidingBloc ul.selection-list li.sl-line {
   cursor: auto; }
 
@@ -80304,6 +80309,12 @@ Scope css
   font-size: 14px;
   background-image: none;
   height: auto; }
+
+/* line 255, stdin */
+/* line 259, stdin */
+#qs-affix.affix {
+  position: fixed;
+  top: 0; }
 
 /* line 16, app/styles/variables.scss */
 /* line 2, stdin */
